# tail-claude-gui

./: .dockerignore  .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: pre-commit.sh
.github/workflows/: ci.yml  release.yml
01/9ec6a36f3f/: metadata.json
08/9fa8d930de/: metadata.json
22/e0a79b5556/: metadata.json
37/7c12748712/: metadata.json
42/e2f8a7f90c/: metadata.json
47/f264263fea/: metadata.json
61/fbad61f702/: metadata.json
62/8f2ec6ae68/: metadata.json
6b/eadf20797a/: metadata.json
74/2e828c6b37/: metadata.json
77/d9f3a5a73b/: metadata.json
8f/c533204560/: metadata.json
93/386de5b143/: metadata.json
98/4d4e83caa0/: metadata.json
a0/885eb9270f/: metadata.json
a3/44849ef31c/: metadata.json
a4/697db3cf83/: metadata.json
b8/4cce8c97ad/: metadata.json
ba/9755cbafc1/: metadata.json
c4/b039ac81bc/: metadata.json
ca/4a472edffa/: metadata.json
df/7df1562933/: metadata.json
docs/: docker.md
ee/bee24f05ec/: metadata.json
fb/6536e54110/: metadata.json
script/: docker-entrypoint.sh  install.sh
shared/: format.ts  projectTree.test.ts  projectTree.ts  tsconfig.json  types.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: convert.rs  http_api.rs  lib.rs  settings.rs  state.rs  watcher.rs
src-tauri/src/commands/: mod.rs  picker.rs  session.rs  settings.rs
src-tauri/src/parser/: cache.rs  chunk.rs  classify.rs  debuglog.rs  entry.rs  ongoing.rs  sanitize.rs  session.rs  subagent.rs  summary.rs  taxonomy.rs
src/components/: DebugViewer.tsx  DetailItem.test.tsx  (+16 more)
tui/: package-lock.json  package.json  tsconfig.json
(+140 files in other folders)
