[package]
name = "tail-claude-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tail_claude_gui_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1.5"
notify = "8"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"
tauri-plugin-opener = "2.5.3"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
