[package]
name = "claude-code-trace"
version = "0.4.7"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "claude_code_trace_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1.5"
notify = "8"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"
tauri-plugin-opener = "2.5.3"
tauri-plugin-single-instance = "2"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.27.0"
filetime = "0.2"
